# onenote.rs

./: CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  deny.toml
onenote_parser/: Cargo.toml
onenote_parser/src/: lib.rs  macros.rs  reader.rs
onenote_parser/src/fsshttpb/: mod.rs  packaging.rs
onenote_parser/src/fsshttpb/data/: binary_item.rs  cell_id.rs  exguid.rs  mod.rs  object_types.rs  serial_number.rs  stream_object.rs
onenote_parser/src/fsshttpb/data_element/: cell_manifest.rs  data_element_fragment.rs  mod.rs  object_data_blob.rs  object_group.rs  revision_manifest.rs  storage_index.rs  storage_manifest.rs
onenote_parser/src/fsshttpb_onestore/: header.rs  mapping_table.rs  mod.rs  object.rs  object_space.rs  packaging.rs  revision.rs  revision_role.rs
onenote_parser/src/local_onestore/: mod.rs  one_store_file.rs
onenote_parser/src/local_onestore/common/: file_chunk_reference.rs  mod.rs  object_declaration_with_ref_count_body.rs  object_space_object_stream_header.rs
onenote_parser/src/local_onestore/file_node/: file_node.rs  file_node_chunk_reference.rs  mod.rs
onenote_parser/src/local_onestore/file_structure/: file_node_list.rs  file_node_list_fragment.rs  free_chunk_list_fragment.rs  header.rs  mod.rs  parse_context.rs  transaction_log_fragment.rs
onenote_parser/src/local_onestore/objects/: file_data_store.rs  global_id_table.rs  id_mapping.rs  mod.rs  object.rs  object_group_list.rs  object_space.rs  parse_context.rs  revision.rs  revision_manifest_list.rs  root_file_node_list.rs
onenote_parser/src/one/property/: author.rs  charset.rs  color.rs  color_ref.rs  file_type.rs  ink_dimensions.rs  layout_alignment.rs  mod.rs  note_tag.rs  note_tag_property_status.rs  note_tag_shape.rs  object_reference.rs  object_space_reference.rs  outline_indent_distance.rs  page_size.rs  (+4 more)
onenote_parser/src/onenote/: content.rs  embedded_file.rs  iframe.rs  image.rs  ink.rs  list.rs  math_inline_object.rs  mod.rs  note_tag.rs  notebook.rs  outline.rs  page.rs  page_content.rs  page_series.rs  rich_text.rs  section.rs  table.rs  text_region.rs
onenote_parser/src/onestore/: mapping_table.rs  mod.rs  object.rs  object_space.rs  revision.rs  revision_role.rs
onenote_parser/src/shared/: attribute_set.rs  cell_id.rs  compact_id.rs  compact_u64.rs  exguid.rs  file_data_ref.rs  guid.rs  jcid.rs  mod.rs  multi_byte.rs  object_prop_set.rs  object_stream_header.rs  prop_set.rs  property.rs  style_set.rs
onenote_parser/src/utils/: errors.rs  file_to_vec.rs  log.rs  mod.rs  parse.rs  reader.rs
onenote_parser/tests/: lib.rs
onenote_parser/tests/samples/: Schnelle Notizen.one
onenote_parser/tests/snapshots/: lib__parse_2016_notebook.snap  lib__parse_section_new.snap
(+347 files in other folders)
