[package]
name = "onenote_parser"
version = "0.3.1"
authors = ["Markus Siemens <markus@m-siemens.de>"]
edition = "2018"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/msiemens/onenote.rs"
description = "A parser for Microsoft OneNote® files"
keywords = ["onenote", "parser"]
categories = ["parser-implementations"]

[features]
backtrace = []

[dependencies]
bytes = "1.2.0"
encoding_rs = "0.8.31"
enum-primitive-derive = "0.2.2"
itertools = "0.10.3"
num-traits = "0.2"
paste = "1.0"
thiserror = "1.0"
uuid = "1.1.2"
widestring = "1.0.2"

[dev-dependencies]
insta = "1.21.1"
