[package]
name = "onenote_parser"
version = "0.3.1"
authors = ["Markus Siemens <markus@m-siemens.de>"]
edition = "2018"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/msiemens/onenote.rs"
description = "A parser for Microsoft OneNote® files"
keywords = ["onenote", "parser"]
categories = ["parser-implementations"]

[features]
backtrace = []

[dependencies]
bytes = "1.9.0"
encoding_rs = "0.8.35"
enum-primitive-derive = "0.3.0"
itertools = "0.14.0"
num-traits = "0.2.19"
paste = "1.0.15"
thiserror = "2.0.11"
uuid = "1.12.0"
widestring = "1.1.0"

[dev-dependencies]
insta = "1.42.0"
