[package]
name = "onenote_parser"
version = "0.3.1"
authors = ["Markus Siemens <markus@m-siemens.de>"]
edition = "2018"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/msiemens/onenote.rs"
description = "A parser for Microsoft OneNote® files"
keywords = ["onenote", "parser"]
categories = ["parser-implementations"]

[features]
backtrace = []

[dependencies]
bytes = "1.11"
encoding_rs = "0.8"
enum-primitive-derive = "0.3"
itertools = "0.14"
num-traits = "0.2"
paste = "1.0"
thiserror = "2.0"
uuid = "1.19"
widestring = "1.2"

[dev-dependencies]
insta = "1.45"
